--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,35 @@ plugins {
     alias(libs.plugins.android.application)
 }
 
+// Load local.properties
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        localProperties.load(stream)
+    }
+}
+
 android {
-    namespace 'com.example.roominate'
+    namespace 'com.roominate'
     compileSdk 36
 
     defaultConfig {
-        applicationId "com.example.roominate"
+        applicationId "com.roominate"
         minSdk 24
         targetSdk 36
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // Supabase build config fields loaded from local.properties
+        buildConfigField "String", "SUPABASE_URL", "\"${localProperties.getProperty('SUPABASE_URL', 'https://your-project-ref.supabase.co')}\""
+        buildConfigField "String", "SUPABASE_ANON_KEY", "\"${localProperties.getProperty('SUPABASE_ANON_KEY', 'your-anon-key-here')}\""
+    }
+
+    // Enable generation of BuildConfig so custom fields are created
+    buildFeatures {
+        buildConfig = true
     }
 
     buildTypes {
@@ -29,9 +46,18 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
-    implementation libs.material
+    implementation 'com.google.android.material:material:1.11.0'  // Updated for Material 3
+    implementation libs.constraintlayout
+    implementation libs.recyclerview
+    implementation libs.viewpager2
+    implementation libs.fragment
+    
+    // HTTP client for API calls
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
