--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".activities.auth.RegisterActivity" />
         <activity android:name=".activities.auth.ForgotPasswordActivity" />
         <activity android:name=".activities.auth.RoleSelectionActivity" />
+        <activity android:name=".activities.auth.SignUpBasicInfoActivity" />
         <activity android:name=".activities.auth.SignUpEmailActivity" />
         <activity android:name=".activities.auth.SignUpEmailVerificationActivity" />
         <activity android:name=".activities.auth.SignUpPasswordActivity" />
