--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     implementation 'com.google.code.gson:gson:2.10.1'
+    // Secure storage for OAuth tokens
+    implementation 'androidx.security:security-crypto:1.1.0'
+    // Image loading
+    implementation 'com.squareup.picasso:picasso:2.8'
+    // CardView UI
+    implementation 'androidx.cardview:cardview:1.0.0'
     
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
