feat: Implement Edit Profile functionality and UI updates
- Added EditProfileActivity for user profile editing with fields for full name, phone number, and occupation.
- Integrated SupabaseClient for fetching and updating user profile data.
- Created layout for EditProfileActivity with Material Design components.
- Added color resources for switch thumb and track colors.
- Introduced drawable resources for various UI elements including background shapes and placeholders.
- Implemented a booking receipt dialog layout with detailed booking information.
- Added image upload item layout for displaying uploaded images.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name=".activities.tenant.BookingActivity" />
         <activity android:name=".activities.tenant.MyBookingsActivity" />
         <activity android:name=".activities.tenant.TenantProfileActivity" />
+        <activity android:name=".activities.tenant.EditProfileActivity" />
         <activity android:name=".activities.tenant.SettingsActivity" />
         
         <!-- Owner Activities -->
