feat: Implement payment tracking and mobile money integration
- Added new layout for reset password verification screen.
- Created dialog layouts for booking details, mobile money payment, and payment status.
- Developed Supabase Edge Functions for handling Lenco payment initiation and webhook processing.
- Enhanced the bookings table with new payment tracking fields and triggers to sync owner information.
- Implemented logic to detect mobile operators based on phone number prefixes.
- Added error handling and logging for payment processes.
- Established database indices for efficient payment reference lookups.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity android:name=".activities.auth.RegisterActivity" />
         <activity android:name=".activities.auth.EmailConfirmationActivity" />
         <activity android:name=".activities.auth.ForgotPasswordActivity" />
+        <activity android:name=".activities.auth.ResetPasswordVerificationActivity" />
+        <activity android:name=".activities.auth.ResetPasswordNewPasswordActivity" />
         <activity android:name=".activities.auth.RoleSelectionActivity" />
         <activity android:name=".activities.auth.SignUpBasicInfoActivity" />
         <activity android:name=".activities.auth.SignUpEmailActivity" />
