--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.18'
     
+    // Location services for high-accuracy GPS
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    
     // Shimmer loading effect
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     // Pull-to-refresh
